2022-05-12T02:03:35Z:
* notice: last 14d: all unq: 4059 26
* notice: prev accum: outdated-all outdated-unq / all unq: 17263 433 / 21089 518
* notice: next accum: outdated-all outdated-unq / all unq: 17440 434 / 21499 532
* notice: prev json diff / prev day diff: unq all: +14 +410 -0 -44 / +14 +410 -0 -44

2022-05-11T02:03:39Z:
* notice: last 14d: all unq: 3826 24
* notice: prev accum: outdated-all outdated-unq / all unq: 17084 432 / 20866 518
* notice: next accum: outdated-all outdated-unq / all unq: 17263 433 / 21089 518
* notice: prev json diff // prev day diff: unq all: +0 +105 / -0 -44 // +0 +105 / -0 -44

2022-05-10T16:38:36Z:
* notice: last 14d: all unq: 3782 24
* notice: prev accum: outdated-all outdated-unq / all unq: 17084 432 / 20802 518
* notice: next accum: outdated-all outdated-unq / all unq: 17084 432 / 20866 518
* notice: prev json diff // prev day diff: unq all: +0 +125 / -0 -61 // +2 +353 / -0 -162

2022-05-10T08:29:09Z:
* notice: last 14d: all unq: 3718 24
* notice: prev accum: outdated-all outdated-unq / all unq: 17084 432 / 20741 516
* notice: next accum: outdated-all outdated-unq / all unq: 17084 432 / 20802 518
* notice: prev json diff // prev day diff: unq all: +2 +123 / -0 -62 // +2 +228 / -0 -101

2022-05-10T01:39:48Z:
* notice: last 14d: all unq: 3657 24
* notice: prev accum: outdated-all outdated-unq / all unq: 16903 430 / 20512 516
* notice: next accum: outdated-all outdated-unq / all unq: 17084 432 / 20741 516
* notice: prev json diff // prev day diff: unq all: +0 +105 / -0 -39 // +0 +105 / -0 -39

2022-05-09T16:36:42Z:
* notice: last 14d: all unq: 3609 24
* notice: prev accum: outdated-all outdated-unq / all unq: 16903 430 / 20452 515
* notice: next accum: outdated-all outdated-unq / all unq: 16903 430 / 20512 516
* notice: prev json diff // prev day diff: unq all: +1 +121 / -0 -61 // +3 +361 / -0 -163

2022-05-09T08:30:42Z:
* notice: last 14d: all unq: 3549 24