@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-05-12T02:03:35Z",
-  "count" : 133,
+  "timestamp" : "2022-05-12T08:30:17Z",
+  "count" : 78,
   "count_minmax" : [ 0, 177 ],
   "count_prev_day_inc" : 176,
   "count_prev_day_dec" : 139,
