@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-12T02:03:35Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 410,
-  "count_prev_day_dec" : 44,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 14,
+  "timestamp" : "2022-05-12T08:30:17Z",
+  "count" : 132,
+  "count_minmax" : [ 0, 132 ],
+  "count_prev_day_inc" : 542,
+  "count_prev_day_dec" : 99,
+  "uniques" : 4,
+  "uniques_minmax" : [ 0, 4 ],
+  "uniques_prev_day_inc" : 18,
   "uniques_prev_day_dec" : 0
 }
