@@ -1,10 +1,10 @@
 {
-  "count": 4059,
+  "count": 4136,
   "uniques": 26,
   "clones": [
     {
       "timestamp": "2022-04-28T00:00:00Z",
-      "count": 133,
+      "count": 78,
       "uniques": 1
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-05-11T00:00:00Z",
       "count": 410,
       "uniques": 14
+    },
+    {
+      "timestamp": "2022-05-12T00:00:00Z",
+      "count": 132,
+      "uniques": 4
     }
   ]
 }
